--- a/WorkshopBackend/OrderService/appsettings.json
+++ b/WorkshopBackend/OrderService/appsettings.json
@@ -1,7 +1,7 @@
 {
   "AWS": {
     "Profile": "default",
-    "Region": "us-west-2"
+    "Region": "eu-north-1"
   },
   "Logging": {
     "LogLevel": {
