--- a/WorkshopBackend/OrderService/appsettings.json
+++ b/WorkshopBackend/OrderService/appsettings.json
@@ -1,7 +1,7 @@
 {
   "AWS": {
     "Profile": "default",
-    "Region": "us-west-2"
+    "Region": "eu-north-1"
   },
   "Logging": {
     "LogLevel": {
@@ -9,5 +9,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=joaquin-database.cr4y6a6oo1h9.eu-north-1.rds.amazonaws.com;Port=5432;Database=joaquin-database;User Id=postgres;Password=.u-hy8bLNXnhWRN"
+  }
 }
